--- a/estilos/style.css
+++ b/estilos/style.css
@@ -5,7 +5,7 @@ body {
     padding: 0px;
     margin: 0px;
     font-family:Arial, Helvetica, sans-serif;
-    background-color: #4782c5;
+    background-image:linear-gradient(to right,#708090, #B0C4DE);
 }
 
 header {
@@ -35,7 +35,7 @@ footer {
 
 a {
     background-color: aliceblue;
-    color: blue;
+    color: #708090;
     text-decoration: none;
     border-radius: 2px;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.493);
